--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -8,12 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
+    - uses: s-weigand/setup-conda@v1.1.0
       with:
-        python-version: 3.8
-    - name: Add conda to system path
-      run: echo $CONDA/bin >> $GITHUB_PATH
+        activate-conda: false
+        python-version: 3.8.*
     - name: Install conda tools
       run: conda install -y anaconda-client conda-build
     - name: Build conda pkg
