--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -8,17 +8,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: s-weigand/setup-conda@v1.1.0
+    - uses: conda-incubator/setup-miniconda@v2
       with:
-        activate-conda: false
+        activate-environment: ""
         python-version: 3.8.*
     - name: Install conda tools
+      shell: bash -l {0}
       run: conda install -y anaconda-client conda-build
     - name: Build conda pkg
+      shell: bash -l {0}
       run: |
         mkdir dist
         conda build . --channel anaconda --channel timdiels --output-folder dist
 #   - name: Publish to anaconda
+#     shell: bash -l {0}
 #     run: anaconda upload --all dist/linux-64/*.tar.bz2
 #     env:
 #       ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
