--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: conda-incubator/setup-miniconda@v2
       with:
-        activate-environment: ""
+        activate-environment: true
         python-version: 3.8.*
         conda-build-version: 3.*
     - name: Install anaconda uploader
