--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -11,19 +11,18 @@ jobs:
     - uses: conda-incubator/setup-miniconda@v2
       with:
         miniconda-version: latest
-        python-version: 3.8.*
         auto-update-conda: true
-        conda-build-version: 3.*
-    - name: Install anaconda uploader
+        python-version: 3.8.*
+    - name: Install conda tools
       shell: bash -l {0}
-      run: conda install -y anaconda-client
-    - name: Publish to anaconda
-      shell: bash -l {0}
-      run: $CONDA_PREFIX/bin/anaconda #upload --all dist/linux-64/*.tar.bz2
-      env:
-        ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
+      run: conda install -y anaconda-client conda-build
     - name: Build conda pkg
       shell: bash -l {0}
       run: |
         mkdir dist
         conda build . --channel anaconda --channel timdiels --output-folder dist
+    - name: Publish to anaconda
+      shell: bash -l {0}
+      run: anaconda #upload --all dist/linux-64/*.tar.bz2
+      env:
+        ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
